--- a/tp-anual/src/main/resources/templates/inicio/inicio.hbs
+++ b/tp-anual/src/main/resources/templates/inicio/inicio.hbs
@@ -11,6 +11,10 @@
   </div>
   <button type="submit" class="btn btn-default">Logearse</button>
 </form>
+{{#if this}}
+<div class="alert alert-danger">Usuario o contrasena incorrectos</div>
+{{/if}}
 {{/partial}}
 
-{{>layout.hbs}}
+
+{{>Base.hbs}}
