--- a/tp-anual/src/main/resources/templates/inicio/inicio.hbs
+++ b/tp-anual/src/main/resources/templates/inicio/inicio.hbs
@@ -2,12 +2,12 @@
 
 <form role="form" action="/" method="POST">
   <div class="form-group">
-    <label for="user">Email address:</label>
-    <input type="user" class="form-control" id="user">
+    <label for="user">Nombre de Usuario:</label>
+    <input type="user" class="form-control" name="user">
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pass">
+    <input type="password" class="form-control" name="pass">
   </div>
   <button type="submit" class="btn btn-default">Logearse</button>
 </form>
