--- a/tp-anual/src/main/resources/templates/admin/inicio.hbs
+++ b/tp-anual/src/main/resources/templates/admin/inicio.hbs
@@ -1,6 +1,6 @@
 {{#partial "contenido"}}
 
-<form class="form-inline">
+<form class="form-inline" action="/pois" method="POST">
   <div class="form-group">
 	<label for="email">Nombre POI:</label>
 	<input type="email" class="form-control" id="nombre">
