--- a/tp-anual/src/main/resources/templates/admin/poi.hbs
+++ b/tp-anual/src/main/resources/templates/admin/poi.hbs
@@ -3,6 +3,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">{{nombre}}</div>
   <div class="panel-body">
+  	<label for="text">Direccion: {{direccion}}</label><br>
     <label for="text">Latitud: {{coordenada.latitud}}</label><br>
     <label for="text">Longitud: {{coordenada.longitud}}</label><br>
     <label for="text">Radio de Cercania: {{radio}}</label><br>
