--- a/tp-anual/src/main/resources/templates/admin/inicio.hbs
+++ b/tp-anual/src/main/resources/templates/admin/inicio.hbs
@@ -2,8 +2,8 @@
 
 <form class="form-inline" action="/pois" method="POST">
   <div class="form-group">
-	<label for="email">Nombre POI:</label>
-	<input type="email" class="form-control" name="nombre">
+	<label for="text">Nombre POI:</label>
+	<input type="text" class="form-control" name="nombre">
   </div>
   <div class="form-group" >
     <label for="pwd">Tipo:</label>
