--- a/tp-anual/src/main/resources/templates/admin/editarPoi.hbs
+++ b/tp-anual/src/main/resources/templates/admin/editarPoi.hbs
@@ -1,33 +1,23 @@
 {{#partial "contenido"}}
 
-<div class="panel panel-primary">
-  <div class="panel-heading">{{nombre}}</div>
-  <div class="panel-body">
-  <label for="text">Direccion: {{direccion}}</label><br>
-    <label for="text">Latitud: {{coordenada.latitud}}</label><br>
-    <label for="text">Longitud: {{coordenada.longitud}}</label><br>
-    <label for="text">Radio de Cercania: {{radio}}</label><br>
-  </div>
-</div>
-
 <form data-toggle="validator" role="form" class="form" action="{{url}}" method="POST">
   <div class="form-group">
 	<label for="text" class="control-label">Nombre:</label>
-	<input type="text" class="form-control" placeholder="{{nombre}}" name="nombre" required>
+	<input type="text" class="form-control" value="{{nombre}}" name="nombre" required>
   </div>
     <div class="form-group">
 	<label for="text">Direccion:</label>
-	<input type="text" class="form-control" placeholder="{{direccion}}" name="direccion" required>
+	<input type="text" class="form-control" value="{{direccion}}" name="direccion" required>
   </div>
     <div class="form-group">
 	<label for="text">Latitud:</label>
-	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" placeholder="{{coordenada.latitud}}" name="latitud" required>
+	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" value="{{coordenada.latitud}}" name="latitud" required>
   </div>
     <div class="form-group">
 	<label for="text">Longitud:</label>
-	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" placeholder="{{coordenada.longitud}}" name="longitud" required>
+	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" value="{{coordenada.longitud}}" name="longitud" required>
   </div>
-  <button type="submit" class="btn btn-default">Modificar</button>
+  <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 
 {{/partial}}
