--- a/tp-anual/src/main/resources/templates/inicio/inicio.hbs
+++ b/tp-anual/src/main/resources/templates/inicio/inicio.hbs
@@ -9,7 +9,7 @@
     <label for="pwd">Password:</label>
     <input type="password" class="form-control" name="pass">
   </div>
-  <button type="submit" class="btn btn-default">Logearse</button>
+  <button type="submit" class="btn btn-default">Ingresar</button>
 </form>
 {{#if this}}
 <div class="alert alert-danger">Usuario o contrasena incorrectos</div>
