--- a/tp-anual/src/main/resources/templates/BaseAdmin.hbs
+++ b/tp-anual/src/main/resources/templates/BaseAdmin.hbs
@@ -2,6 +2,15 @@
 <head>
 	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   	<link rel="stylesheet"  href="main.css">
+ 	
+ 	<!--  jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    
+    <script src="js/bootstrap.js"></script>
+    
+    <!-- Bootstrap Date-Picker Plugin -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
 </head>
 <body>
@@ -36,4 +45,10 @@
     </p>
 </footer>
 </body>
+
+
+{{#block "contenidoScript"}}
+	{{/block}}
+	
+	
 </html>
