--- a/tp-anual/src/main/resources/templates/admin/consultas.hbs
+++ b/tp-anual/src/main/resources/templates/admin/consultas.hbs
@@ -1,28 +1,49 @@
 {{#partial "contenido"}}
 
- <form role="form" action="/filtrarConsultas" method="GET">
+ <form role="form" action="filtrarConsultas" method="GET">
         <div class="form-group">
             <label class="control-label" for="desde">Consultas desde</label>
-            <input class="form-control" i passing multiple objectsd="desde" name="desde" placeholder="DD/MM/YYY" type="text"/>
+            <input class="form-control" id="desde" name="desde" placeholder="DD/MM/YYY" type="text"/>
         </div>
         <div class="form-group">
             <label class="control-label" for="hasta">Consultas hasta</label>
             <input class="form-control" id="hasta" name="hasta" placeholder="DD/MM/YYY" type="text"/>
         </div>
         <div class="form-group">
-            <label class="control-label" for="cantidadDevueltos">Cantidad de POIs resultado</label>
-            <input class="form-control" id="cantidadDevueltos" name="cantidad" type="text"/>
+            <label class="control-label" for="cantidad">Cantidad de POIs del resultado</label>
+            <input class="form-control" id="cantidad" name="cantidad" type="number" min="0"/>
         </div>
         <div class="form-group" >
 	    <label for="terminal">Terminal:</label>
 	      <select class="form-control" name="terminal">
 		     {{#each terminales}}
-			  	<option value={{id}}>{{nombre}}</option>
+			  	<option value={{nombre}}>{{nombre}}</option>
 			  {{/each}}
    		  </select>
 	  	</div>
         <button type="submit" class="btn btn-default">Buscar</button>
     </form>
+    
+    <table class="table table-striped">
+	  	<tr>
+			<th>Fecha</th>
+			<th>Frase Buscada</th>
+			<th>Servicio Buscado</th>
+			<th>Terminal</th>
+			<th>Tiempo Tardado</th>
+			<th>Accion</th>
+			{{#each busquedas}}
+				<tr>
+				  	<td>{{fecha}}</td>
+				  	<td>{{fraseBuscada}}</td>
+				  	<td>{{servicioBuscado}}</td>
+				  	<td>{{terminal}}</td>
+				  	<td>{{tiempoDemorado}}</td>
+				  	<td><a href="{{url}}"><span class="glyphicon glyphicon-search"></span></a></td>
+			  	</tr>
+			{{/each}}			
+		</tr>		
+	</table>
     
 {{/partial}}
 
