--- a/tp-anual/src/main/resources/templates/admin/consultas.hbs
+++ b/tp-anual/src/main/resources/templates/admin/consultas.hbs
@@ -24,6 +24,10 @@
         <button type="submit" class="btn btn-default">Buscar</button>
     </form>
     
+    {{#if error}}
+	<div class="alert alert-danger">Uno o mas campos necesarios incompletos</div>
+	{{/if}}
+    
     <table class="table table-striped">
 	  	<tr>
 			<th>Fecha</th>
