--- a/tp-anual/src/main/resources/templates/admin/editarTerminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/editarTerminal.hbs
@@ -6,17 +6,18 @@
 	<input type="text" class="form-control" value="{{nombre}}" name="nombre" required>
   </div>
     <div class="form-group">
-	<label for="text">Direccion:</label>
-	<input type="text" class="form-control" value="{{direccion}}" name="direccion" required>
+	<label for="text">Comuna:</label>
+	<input type="text" class="form-control" value="{{nombreComuna}}" name="nombreComuna" required>
   </div>
-    <div class="form-group">
-	<label for="text">Latitud:</label>
-	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" value="{{coordenada.latitud}}" name="latitud" required>
-  </div>
-    <div class="form-group">
-	<label for="text">Longitud:</label>
-	<input type="text" pattern="[0-9]{1,}.[0-9]{1,}" class="form-control" value="{{coordenada.longitud}}" name="longitud" required>
-  </div>
+  <BR>
+    <label for="text">Acciones:</label><br>
+    <div class="checkbox">
+      <label><input type="checkbox" value="" checked="checked">Almacenar búsquedas</label>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" value="" checked="checked">Notificar por mail</label>
+    </div>
+    <BR>
   <button type="submit" class="btn btn-default">Guardar</button>
 </form>
 
