--- a/tp-anual/src/main/resources/templates/admin/consultas.hbs
+++ b/tp-anual/src/main/resources/templates/admin/consultas.hbs
@@ -16,6 +16,7 @@
         <div class="form-group" >
 	    <label for="terminal">Terminal:</label>
 	      <select class="form-control" name="terminal">
+	      	      <option selected disabled>Elegir terminal</option> 
 		     {{#each terminales}}
 			  	<option value={{nombre}}>{{nombre}}</option>
 			  {{/each}}
