--- a/tp-anual/src/main/resources/templates/admin/nuevaTerminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/nuevaTerminal.hbs
@@ -11,10 +11,10 @@
   <BR>
     <label for="text">Acciones:</label><br>
     <div class="checkbox">
-      <label><input type="checkbox" value="" checked="">Almacenar búsquedas</label>
+      <label><input type="checkbox" name="obsBusqueda" notchecked>Almacenar búsquedas</label>
     </div>
     <div class="checkbox">
-      <label><input type="checkbox" value="" checked="">Notificar por mail</label>
+      <label><input type="checkbox" name="obsMail"  notchecked>Notificar por mail</label>
     </div>
     <BR>
   <button type="submit" class="btn btn-default">Guardar</button>
