--- a/tp-anual/src/main/resources/templates/admin/terminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/terminal.hbs
@@ -7,10 +7,10 @@
    <BR>
   <label for="text">Acciones:</label><br>
     <div class="checkbox">
-      <label><input type="checkbox" value=""disabled checked="checked">Almacenar búsquedas</label>
+      <label><input type="checkbox" disabled {{isTrue tieneGestorBusquedas}}>Almacenar búsquedas</label>
     </div>
     <div class="checkbox">
-      <label><input type="checkbox" value=""disabled checked="checked">Notificar por mail</label>
+      <label><input type="checkbox" disabled {{isTrue tieneMailActivo}}>Notificar por mail</label>
     </div>
   </div>
 </div>
