--- a/tp-anual/src/main/resources/templates/admin/terminales.hbs
+++ b/tp-anual/src/main/resources/templates/admin/terminales.hbs
@@ -6,7 +6,7 @@
 	      <select class="form-control" name="comuna">
 	      <option selected disabled>Elegir comuna</option> 
 		     {{#each comunas}}
-			  	<option value={{nombre}}>{{nombre}}</option>
+			  	<option value={{this}}>{{this}}</option>
 			  {{/each}}
    		  </select>
 
