--- a/tp-anual/src/main/resources/templates/admin/editarTerminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/editarTerminal.hbs
@@ -4,6 +4,12 @@
   <div class="form-group">
 	<label for="text" class="control-label">Nombre:</label>
 	<input type="text" class="form-control" value="{{terminal.nombre}}" name="nombre" required>
+	<BR>
+	<label for="text" class="control-label">Usuario:</label>
+	<input type="text" class="form-control" value="{{terminal.user}}" name="user" required>
+	<BR>
+	<label for="text" class="control-label">Contraseña:</label>
+	<input type="text" class="form-control" value="{{terminal.pass}}" name="pass" required>
   </div>
     <div class="form-group">
 	<label for="text">Comuna:</label>
