--- a/tp-anual/src/main/resources/templates/admin/terminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/terminal.hbs
@@ -4,6 +4,9 @@
   <div class="panel-heading">{{nombre}}</div>
   <div class="panel-body">
    <label for="text">Comuna: {{nombreComuna}}</label><br>
+   	<BR>
+   	<label for="text">Usuario: {{user}}</label><br>
+   	<label for="text">Contraseña: {{pass}}</label><br>
    <BR>
   <label for="text">Acciones:</label><br>
     <div class="checkbox">
