terminales terminadas, falta una cosita

--- a/tp-anual/src/main/resources/templates/admin/nuevaTerminal.hbs
+++ b/tp-anual/src/main/resources/templates/admin/nuevaTerminal.hbs
@@ -1,5 +1,6 @@
 {{#partial "contenido"}}
 
+<form data-toggle="validator" role="form" class="form" action="{{url}}" method="POST">
   <div class="form-group">
  <label for="text" class="control-label">Nombre:</label>
  <input type="text" class="form-control"  name="nombre" required>
